[metadata]
name = urchin
summary = Cloud computing fabric controller
description-file =
    README.rst
author = liuwfng
author-email = openstack-dev@lists.openstack.org
home-page = http://www.liuwfng.net/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    urchin

data_files =
    /etc/urchin =
        etc/urchin/urchin.conf

[entry_points]
console_scripts =
    urchin-compute = urchin.cmd.compute:main
